--- a/certifications.html
+++ b/certifications.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Education</title>
+    <title>Certifications</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -15,17 +15,16 @@
           <li><a href="certifications.html">Certifications</a></li>
         </ul>
       </nav>
-      <h1>Education</h1>
+      <h1>Certifications</h1>
     </header>
     <section id="services">
       <ul>
-        <li><strong>Bachelor of Science in Computer Science</strong></li>
-        <li><strong>High School Diploma</strong></li>
-        <li><strong>Introduction to Computer Science</strong></li>
-        <li><strong>Data Structures and Algorithms</strong></li>
-        <li><strong>Object-Oriented Programming</strong></li>
-        <li><strong>Database Systems</strong></li>
-        <li><strong>Web Development</strong></li>
+        <li><strong>Deans List Fall 2022</strong></li>
+        <li><strong>Deans List Fall 2021</strong></li>
+        <li><strong>Deans List Spring 2021</strong></li>
+        <li><strong>Deans List Fall 2020</strong></li>
+        <li><strong>O'level GSCE Chemistry Distinction</strong></li>
+        <li><strong>O'level GSCE Physics Distinction</strong></li>
       </ul>
     </section>
     <footer>
